# capstone-2025-05

./: .dockerignore  .env  .env.example  .gitignore  API_DOCUMENTATION.md  CMakeLists.txt  DOCKER.md  Dockerfile  Dockerfile.frontend  MAPLE.code-workspace  MAPLE.jucer  README.md  SETUP.md  _config.yml  add_song.py  analysis-pipeline.ipynb  analysis.env  analyze.py  app.py  celeryconfig.py  clear_mongodb.sh  compare_f0.py  comparef0withjson.py  default.conf  docker-compose.yml  index.html  index.md  init_db_container.py  main.py  maple-client-desktop.code-workspace  midi_analyze.py  model.py  nginx.conf  package-lock.json  package.json  process_reference_api.py  pyproject.toml  requirements.txt  templates.py  test-analysis.py  (+1 more)
.cursor/rules/: juce-rule.mdc
.github/workflows/: build-and-push.yml  build-windows.yml  deploy.yml  main.yml
Data/: fake_notice_data.json
Source/: AmpliTubeProcessor.h  AudioPlaying.h  AudioRecording.h  AudioSettingsDialog.h  BottomComponent.cpp  BottomComponent.h  ContentPanelComponent.cpp  ContentPanelComponent.h  EffectControls.cpp  EffectControls.h  FriendActivityItem.cpp  FriendActivityItem.h  GuitarPracticeComponent.cpp  GuitarPracticeComponent.h  HeaderComponent.cpp  HeaderComponent.h  HomeComponent.cpp  HomeComponent.h  LeftPanel.cpp  LeftPanel.h  Main.cpp  MainActionComponent.cpp  MainActionComponent.h  MainComponent.cpp  MainComponent.h  NewProjectDialog.cpp  NewProjectDialog.h  PracticeSongComponent.cpp  PracticeSongComponent.h  RecordingComponent.cpp  RecordingComponent.h  RightPanel.cpp  ScoreComponent.cpp  ScoreComponent.h  Screen.h  SidebarButton.cpp  SidebarButton.h  SongSelectionComponent.cpp  SongSelectionComponent.h  SongThumbnail.cpp  (+10 more)
Source/API/: SongsAPIService.cpp  SongsAPIService.h
Source/App/: Main.cpp
Source/Components/: MainComponent.cpp  MainComponent.h  ProjectModeComponent.h
Source/Components/Layout/: HeaderComponent.cpp  HeaderComponent.h  MainLayout.cpp  MainLayout.h  ProjectLayout.cpp  ProjectLayout.h
Source/Components/Login/: LoginComponent.cpp  LoginComponent.h
Source/Components/Navigation/: SidebarComponent.cpp  SidebarComponent.h
Source/Components/Pages/: CoursesPage.cpp  CoursesPage.h  (+8 more)
Source/Config/: AppConfig.h
Source/Controller/: AmpliTubeProcessor.cpp  AmpliTubeProcessor.h  AudioController.cpp  AudioController.h  ContentController.cpp  ContentController.h  GuitarPracticeController.cpp  GuitarPracticeController.h  TransportController.cpp  TransportController.h
Source/Controllers/: ApplicationController.cpp  ApplicationController.h
Source/Event/: Event.h  EventBus.h  IEventListener.h
Source/Model/: AudioModel.cpp  AudioModel.h  AudioRecorder.cpp  AudioRecorder.h  AudioTap.h  AudioTransportSourceSnapshot.h  ContentModel.cpp  ContentModel.h  IAudioModelListener.h  RecordingThumbnail.cpp  RecordingThumbnail.h  Song.h  SpotifyService.cpp  SpotifyService.h  TabPlayer.cpp  TabPlayer.h  gp_parser.cpp  gp_parser.h
Source/Models/: ApplicationState.h
Source/Services/: AuthService.cpp  AuthService.h  SpotifyService.cpp  SpotifyService.h
Source/UI/: LeftSidebar.h  MainPanel.h  RightSidebar.h
Source/Util/: EnvLoader.h  xml_module.cpp
Source/Utils/: Constants.h
Source/View/: AlbumGridView.cpp  AlbumGridView.h  AlbumThumbnailComponent.cpp  AlbumThumbnailComponent.h  BottomComponent.cpp  CenterPanel.cpp  CenterPanel.h  ContentPanelComponent.cpp  ContentPanelComponent.h  FingeringGuideComponent.h  GuitarPracticeComponent.cpp  GuitarPracticeComponent.h  HeaderComponent.cpp  IPanelComponent.h  LeftPanel.cpp  LeftPanel.h  MainActionComponent.cpp  MainComponent.cpp  MainComponent.h  Maple3DAudioVisualiserComponent.h  MapleHorizontalAudioVisualiserComponent.h  PerformanceAnalysisComponent.h  PracticeProgressComponent.h  PracticeSettingsComponent.cpp  PracticeSettingsComponent.h  RightPanel.cpp  RightPanel.h  ScoreComponent.cpp  ScoreComponent.h  TopBar.cpp  TopBar.h  WaveformGraph.cpp
Source/Windows/: LoginWindow.h
_data/: navigation.yml
_includes/: footer.html  navbar.html
_layouts/: default.html
app/: __init__.py  database.py  db.py  db_utils.py  main.py  schemas.py
app/api/: __init__.py  v1.py
app/models/: song.py
app/routers/: __init__.py  songs.py
manager/: account_service.py  firebase_manager.py  mypage_service.py  post_model.py  post_service.py  ranking_service.py  recent_prepare_service.py  soundSourceAnalysis_service.py  spotify_service.py  test_service.py
maple-client-desktop/: .gitignore  MAPLE.code-workspace  MAPLE.jucer
models/: response_models.py
myapi/: pyvenv.cfg
myapi/Scripts/: activate  activate.bat
nginx/: Dockerfile  nginx.conf
routers/: account_router.py  analysis_router.py  mainsearch_router.py  myPage_router.py  post_router.py  posting_router.py  ranking_router.py  recent_prepare_router.py  song_router.py  soundSourceAnalysis_router.py  spotify_router.py  users_router.py
scripts/: deploy.sh  insert_dummy_reference_data.py
src/: App.css  App.js  index.css  index.js
src/Auth/: spotifyAuth.js
src/Components/: MapleFooter.js  MapleHeader.js
src/Context/: AuthContext.js  SpotifyAuthContext.js  SpotifyContext.js
src/Data/: analysis.json  compare.json  fake_notice_data.json  feedback_8583d5bf.json  maplegraph.json  newCompare.json  rank_data.json  resultDetail.json  songDetail.json
src/Hooks/: useCommentsQuery.js  useEditPostMutation.js  useFileDownloader.js  usePostInfoQuery.js  usePostWriteMutation.js
src/Routes/: AppRoutes.js
src/Utils/: PlaySpotifyApi.js  analysisApi.js  api.js  audioApi.js  audoApi.js  loadSpotifySDK.js  spotifyApi.js
templates/: home.html
test/midi/: 26.mid  homecoming.mid
tests/: __init__.py  celery_mock.py  conftest.py  db_patch.py  test_account_router.py  test_account_service.py  test_api.py  test_firebase_manager.py  test_mypage_router.py  test_mypage_service.py  test_post_router.py  test_post_service.py  test_ranking_router.py  test_ranking_service.py  test_recent_prepare_router.py  test_recent_prepare_service.py  test_songs.py  test_spotify_router.py
workers/: __init__.py  dsp.py  feedback.py  tasks.py
(+177 files in other folders)
